# unused-api-onlyone-admin

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
proto/: api_onlyone_admin.proto
src/: database.rs  lib.rs  main.rs  schema.rs
src/models/: models.rs
src/routes/: index.rs
src/services/: index.rs
